--- a/resources/FCPDwb_pref.ui
+++ b/resources/FCPDwb_pref.ui
@@ -24,7 +24,7 @@
    <item row="0" column="1">
     <widget class="Gui::PrefFileChooser" name="fileChooser">
      <property name="fileName">
-      <string></string>
+      <string>puredata</string>
      </property>
      <property name="prefEntry" stdset="0">
       <cstring>pd_path</cstring>
